RESOLVED FIXED241507
REGRESSION(r265492): Removed ability to pass GStreamer options from MiniBrowser to WebProcess
https://bugs.webkit.org/show_bug.cgi?id=241507
Summary REGRESSION(r265492): Removed ability to pass GStreamer options from MiniBrows...
Philippe Normand
Reported 2022-06-10 03:35:42 PDT
oops
Attachments
Philippe Normand
Comment 1 2022-06-10 03:39:22 PDT
EWS
Comment 2 2022-06-13 01:10:14 PDT
Committed r295483 (251488@main): <https://commits.webkit.org/251488@main> Reviewed commits have been landed. Closing PR #1442 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-06-13 01:11:14 PDT
Note You need to log in before you can comment on or make changes to this bug.