REGRESSION(r265492): Removed ability to pass GStreamer options from MiniBrowser to WebProcess https://bugs.webkit.org/show_bug.cgi?id=241507

Patch by Philippe Normand <philn@igalia.com> on 2022-06-13
Reviewed by Xabier Rodriguez-Calvar.

When the static gstreamer-full library is disabled at build time we should still have the
possibility to add the GStreamer CLI init group to the UIProcess commandline.

* Tools/MiniBrowser/gtk/CMakeLists.txt:
* Tools/MiniBrowser/gtk/main.c:
(main):
* Tools/MiniBrowser/wpe/CMakeLists.txt:
* Tools/MiniBrowser/wpe/main.cpp:
(main):

Canonical link: https://commits.webkit.org/251488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295483 268f45cc-cd09-0410-ab3c-d52691b4dbfc