Tools/MiniBrowser/gtk/main.c
@@ -34,6 +34,10 @@
 #include <string.h>
 #include <webkit2/webkit2.h>
 
+#if !USE_GSTREAMER_FULL && (ENABLE_WEB_AUDIO || ENABLE_VIDEO)
+#include <gst/gst.h>
+#endif
+
 #define MINI_BROWSER_ERROR (miniBrowserErrorQuark())
 
 static const gchar **uriArguments = NULL;
@@ -803,6 +807,9 @@ int main(int argc, char *argv[])
     g_option_context_add_main_entries(context, commandLineOptions, 0);
 #if !GTK_CHECK_VERSION(3, 98, 0)
     g_option_context_add_group(context, gtk_get_option_group(TRUE));
+#endif
+#if !USE_GSTREAMER_FULL && (ENABLE_WEB_AUDIO || ENABLE_VIDEO)
+    g_option_context_add_group(context, gst_init_get_option_group());
 #endif
 
     WebKitSettings *webkitSettings = webkit_settings_new();
